--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,11 +1,9 @@
-title: default-project-template
+title: Share your Python project
 hero_image: images/banner.png
-description: default-project-template description
+description: Share your Python project
 version: 4
 listed: false
 copyedit: false
-last_tested: "2022-05-19"
+last_tested: "2022-12-19"
 steps:
-  - title: Introduction
-  - title: Step title
-  - title: What next?
+  - title: Share your Python project
